--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "babel-install": "^2.1.0",
     "clsx": "^1.2.1",
     "hooks": "^0.3.2",
     "react": "^18.2.0",
