--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.1"
+    "react-loader-spinner": "^5.3.4",
+    "react-router-dom": "^6.14.1",
+    "web-vitals": "^3.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
